--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,10 +3,6 @@ on:
   push:
     tags:
     - "v[0-9]+.[0-9]+.[0-9]+"
-
-permissons:
-  contents: write
-
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
@@ -16,14 +12,13 @@ jobs:
         with:
           fetch-depth: 1
       - name: Setup Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v1
         with:
-          go-version: stable
+          go-version: 1.23
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v6
+        uses: goreleaser/goreleaser-action@v1
         with:
-          distribution: goreleaser
-          version: "~> v2"
-          args: release --clean
+          version: latest
+          args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
