--- a/.github/workflows/releasev2.yml
+++ b/.github/workflows/releasev2.yml
@@ -1,8 +1,8 @@
-name: release
+name: release-v2
 on:
   push:
     tags:
-    - "v2.[0-9]+.[0-9]+"
+    - "v2.[0-9]+.[0-9]+-.*"
 
 permissions:
   contents: write
